p2/confs/app-k3s-resources.yaml
# Deployments

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-one
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-one
          configMap:
            name: app-one

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-two
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-two
          configMap:
            name: app-two

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-three
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-three
          configMap:
            name: app-three

# Services
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

# ConfigMaps
