p2/confs/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik

  spec:
    entryPoints:
      - web:
        address: ":80"

    routes:
      - match: Host(`app1.com`) || (Host(`app1.com`) && Path(`/`))
        kind: Rule
        services:
          - name: app-one
            port: 80
      - match: Host(`app2.com`) || (Host(`app2.com`) && Path(`/`))
        kind: Rule
        services:
          - name: app-two
            port: 80
      - match: ClientIP(`192.168.42.110`)
        kind: Rule
        services:
          - name: app-three
            port: 80
